style.css
/* ... */
.history p {padding-bottom: 0}
.history p:nth-of-type(n + 2) {text-indent: 1.5em;}
.history p:first-child:first-letter {float: left;font-size: 5em;line-height: 1em;padding: 0px .15em 0 0;}

footer {display: block;clear: both;background-color: white;border-top: 1px solid #f6f6f6;}
footer p {font-weight: 400;color: #bcc8d1;padding: 1.5em 0;font-size: 0.75em;}


/**** Portfolio ****/
.pieces li {list-style-type: none;box-shadow: 0px 0px 5px rgba(0,0,0,.4);height: auto;overflow: hidden;border-radius: 4px;position: relative;z-index: 10;}
.pieces img {padding: 0;margin: 0;}
.pieces a {color: white;text-decoration: none;border-radius: 4px;display: block;width: 100%;height: 100%;overflow: hidden;}
.pieces div {display: none;background-color: rgba(0,0,0,.8);position: absolute;top: 0px;left: 0px;width: 100%;height: 100%;border-radius: 4px;}
.pieces a:hover {}
.pieces a:hover div {display: block}
.pieces h4 {color: white;padding: 3em 1em 0.5em 1em;text-shadow: 0px 0px 3px black;}
.pieces p {color: white;padding: 0 1em 1em 1em;text-shadow: 0px 0px 3px black;font-size: 0.85em;}
.pieces strong {text-transform: uppercase;opacity: .5;font-weight: normal;}


.recent {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1em;
    padding: 0;
    margin: 0;
}
.recent li {
    list-style-type: none;
}
.recent img {
    width: 100%;
    height: auto;
    display: block;
    position: relative;
    right: 1em;
}

@media only screen and (max-width: 650px) {
    .recent {
        grid-template-columns: 1fr;
    }
}


/**** Masonry Layout ****/
.arch_mas {
    padding-top: 1.5em;
}
.masonry {
    columns: 3;
    column-gap: 1em;
    padding: 0;
    margin: 0;
}
.masonry li {
    list-style-type: none;
    break-inside: avoid;
    margin-bottom: 1em;
    border-radius: 4px;
    overflow: hidden;
    background: rgba(0, 0, 0, 0.05);
}
.masonry img {
    display: block;
    width: 100%;
    padding: 1em;
    height: auto;
}

@media only screen and (max-width: 768px) {
    .masonry {
        columns: 3;
    }
}

@media only screen and (max-width: 650px) {
    .masonry {
        columns: 2;
    }
}


/**** Research Page ****/
.research-list {
    list-style: none;
}
.research-list li {
    position: relative;
    z-index: 1; 
    padding: 0.5em 0;
    border-bottom: 1px solid rgba(0,0,0,0.1);
}
.research-list li a {
    display: block;
    text-decoration: none;
    font-size: var(--text-md);
    font-family: var(--font-secondary);
    font-size: 1em;
    text-transform: none;
    max-width: 960px;
    margin: 0 auto;
    padding: 0 1.5em;
    text-align: left;
}
.research-list li a:hover {
    color: black;
}
.research-list li cite {
    font-style: normal;
    font-weight: 100;
    padding-top: 0.5em;
    display: block;
    font-size: 1.5em;
    font-family: var(--font-primary);
}
.research-list li em {
    font-weight: bold;
    font-style: normal;
    font-size: .75em;
    padding: 0.3em;
}
.abstract {
    margin: 0;
    padding: 1em 0 0.25em 0;
    font-weight: normal;
    font-family: var(--font-primary);
}
.research-list li {
    margin-inline: calc(-50vw + 50%);
    padding-inline: calc(50vw - 50%);
}
.research-list li:has(a:hover) {
    background: white;
}
.readmore {
    color: #ffffff;
    margin: 0 0 2em 0;
    padding: 0.15em 0.5em;
    font-size: 0.5em;
    display: inline-block;
    border-radius: 2px;
    background-color: rgb(158, 0, 0);
    text-transform: uppercase;
    text-decoration: none;
    font-weight: 700;
}
.research-list li a:hover .readmore {
    background-color: black;
}
.research-list li a:hover .researchn {
    color: #424e57;
}


/**** Unpublished Working Papers ****/

/* Full-width band containers */
.title-band {
    width: 100%;
    background: #f4f4f4;
    text-align: left;
    padding-top: 5.5em;
}
.abstract-band {
    width: 100%;
    background: rgb(235, 235, 235);
    text-align: left;
}
.fullreaders {
    background: white;
    padding-top: 0;
}
/* Centered content inside bands */
.title-container,
.abstract-container {
    max-width: 960px;
    margin: 0 auto;
    padding: 0 1.5em;
}

/* Tufte-style sidenotes - pure CSS approach */
.unpublishedworks {
    display: block;
    max-width: 960px;
    margin: 0 auto;
    padding: 0 1.5em 1.5em 1.5em;
    counter-reset: sidenote-counter;
}

/* Constrain content width to leave room for sidenotes */
.unpublishedworks > *:not(.sidenote) {
    max-width: 38em;
}

/* Sidenote reference styling */
.sidenote-ref {
    counter-increment: sidenote-counter;
    text-decoration: none;
    color: inherit;
}

.sidenote-ref::after {
    content: counter(sidenote-counter);
    font-size: 0.65em;
    vertical-align: super;
    line-height: 0;
    color: #0066cc;
    padding: 0 2px;
    font-weight: 500;
}

/* Sidenote in margin */
.sidenote {
    float: right;
    clear: right;
    width: 23em;
    margin-right: -26em;
    margin-top: 0.25rem;
    margin-bottom: 1rem;
    font-size: .75em;
    line-height: 1.5;
    font-family: var(--font-primary);
    color: #444;
    font-weight: normal;
    text-transform: none;
    text-indent: 0;
}

.sidenote::before {
    content: counter(sidenote-counter) ". ";
    font-weight: 600;
    color: #1a1a1a;
}

/* Fix alignment when sidenote is inside blockquote */
blockquote .sidenote {
    margin-right: -28em;
    font-style: normal;
}

/* Fix alignment and size when sidenote is inside figure */
figure .sidenote {
    font-size: 0.75rem;
    text-indent: 0;
}

/* Highlight when targeted */
.sidenote:target {
    background: #fff9c4;
    padding: 0.5rem 0.6rem;
    margin-left: -0.6rem;
    border-radius: 4px;
}

/* Sidenote links */
.sidenote a {
    color: #555;
    text-decoration: underline;
    text-transform: none;
}

.sidenote a:hover {
    color: #0066cc;
    text-decoration-color: #0066cc;
}

/* Desktop: show sidenotes, hide endnotes */
@media (min-width: 960px) {
    .endnotes {
        display: none;
    }
}
/* ... */

